CSS fixes to blend the scrollbar more

--- a/css/browser.css
+++ b/css/browser.css
@@ -10,9 +10,8 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    opacity: 0.6;
-    background-color: #252525;
-    border: 3px solid #1a3d5a;
+    background-color: rgba(37,37,37,0.6);
+    border: 5px solid #1a3d5a;
     border-right: 0;
 }
 #serverlist {
@@ -27,12 +26,13 @@
     position: absolute;
     top: 15px;
     bottom: 0;
-    right: 15px;
-    width: 26%;
+    right: 2;
+    width: 27.5%;
 }
 .gameCard{
     opacity: 0.8;
     padding: 15;
+    margin-right: 0;
     padding-bottom: 30;
     color: white;
     background-color: black;
@@ -114,7 +114,7 @@
 	position:fixed; bottom:0; right: 0;
 	z-index:1000;
 	padding-right: 8;
-	padding-bottom: 5;
+	padding-bottom: 7;
     color: white;
 }
 #setBrowser{
@@ -122,7 +122,7 @@
 	position:fixed; bottom:17; right: 0;
 	z-index:1000;
 	padding-right: 8;
-	padding-bottom: 4;
+	padding-bottom: 6;
     display: none;
 }
 #setBrowser:a{
@@ -159,8 +159,8 @@ img{
     display: none;
 }
 ::-webkit-scrollbar-track-piece  {
-    background-color: rgba(0,0,0,0);
-    border: 3px solid #1a3d5a;
+    background-color: rgba(37,37,37,0.8);
+    border: 5px solid #1a3d5a;
     border-left: 0;
 } 
 ::-webkit-scrollbar-thumb:vertical {
